# md

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  md_program  traj.xyz  vmd.sh  vmd.vmd
include/: distance.h  useful.h
input/: sys.ff  sys.opt  sys.xyz
output/: traj.xyz
src/: genVel.cpp  genVel.h  leapFrog.cpp  leapFrog.h  main.cpp  main.h  readFF.cpp  readFF.h  readOpt.cpp  readOpt.h  readXYZ.cpp  readXYZ.h
test/: a.out  read.cpp  sys.ff  sys.opt  sys.opt2  sys.xyz
test/backup/1/: read.cpp  sys.xyz  sys_traj.xyz
test/backup/2/: read.cpp  run.sh
